bug fix: remove white space on android(tested on note5) that showed on the right side of screen.
add body to overflow-x: hidden; already used for html tag

--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
     box-shadow: none;
 }
 
-html{
+html, body{
     overflow-x: hidden;
 }
 
